[tool.poetry]
name = "loan optimizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8"
numpy = "^1.21.4"
scikit-learn = "^1.0.1"
scikit-optimize = "^0.9.0"
matplotlib = "^3.4.3"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
